# cppml

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  main.cpp
include/cppml/: BallTree.h  KDTree.h  KMeans.h  KNN.h  LinearRegression.h  Matrix.h  Random.h  RidgeRegression.h  Vector.h  cppml.h  math_utils.h
src/: BallTree.cpp  CMakeLists.txt  KDTree.cpp  KMeans.cpp  KNN.cpp  LinearRegression.cpp  Matrix.cpp  Random.cpp  RidgeRegression.cpp  Vector.cpp  cppml.cpp  math_utils.cpp
